--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+button {
+  padding: 5px 10px;
+  background-color: #f3f3f3;
+  border: 1px solid #919191;
+  border-radius: 5px;
+}
+
+select {
+  padding: 5px 10px;
+  border: 1px solid #919191;
+  border-radius: 5px;
+}
+
+input {
+  padding: 5px;
+  border: 1px solid #919191;
+  border-radius: 5px;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +43,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
